--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <base href="/" />
+    <link rel="icon" href="./favicon.ico" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Quantify - Stock Market Dashboard" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" crossorigin="use-credentials" />
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link rel="manifest" href="./manifest.json" crossorigin="use-credentials" />
     <title>Quantify</title>
     <script>
       // Set base URL for API requests
