--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Quantify - Stock Market Dashboard" />
     <link rel="apple-touch-icon" href="./logo192.png" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" type="application/manifest+json" />
     <title>Quantify</title>
     <script>
       // Set base URL for API requests
